[package]
name = "jsonref"
version = "0.4.1"
edition = "2021"
description = "Deref your JSONSchema here!"
license = "MIT"
authors = ["David Raznick <david.raznick@opendataservices.org>"]
repository = "https://github.com/kindly/jsonref-rs"
homepage = "https://github.com/kindly/jsonref-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0.0", features = ["display", "error", "from", "from_str"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json", "charset"] }
url = "2"
